# osm-integration-haystack

./: .gitignore  CHANGELOG.md  LICENSE  README.md  plan_general.md  plan_mvp.md  pyproject.toml  requirements.txt  temp_output.json  test.py  test_output.json
docs/superpowers/specs/: 2026-05-29-slim-output-design.md
examples/: README.md  agent_osm_demo.py
src/osm_integration_haystack/: __init__.py  osm_doc_converter.py  osm_fetcher.py  overpass_client.py
src/osm_integration_haystack/clients/: overpass_client.py
src/osm_integration_haystack/converters/: osm_doc_converter.py  osm_to_documents.py
src/osm_integration_haystack/utils/: geo_utils.py
tests/: test_osm_converter.py  test_osm_fetcher.py  test_output.json
